--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile("commons-lang:commons-lang:2.3")
     compile("com.h2database:h2")
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("com.jayway.jsonpath:json-path:1.2.0")
 }
 
 
