--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories { 
+	mavenLocal()
     mavenCentral()
 }
 
@@ -31,13 +32,13 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.hateoas:spring-hateoas")
     compile("org.springframework.plugin:spring-plugin-core:1.1.0.RELEASE")
+    compile("com.oracle:ojdbc6:11.2.0")
     
     compile("commons-lang:commons-lang:2.3")
-    compile("com.h2database:h2")
+    testCompile("com.h2database:h2")
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("com.jayway.jsonpath:json-path:1.2.0")
 }
-
 
 
 task wrapper(type: Wrapper) {
