--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ sourceCompatibility = 1.8
 
 jar {
     baseName = 'idhadrion'
+    version = "${version}"
 }
 
 description = "Identidade e Acesso"
