--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,6 @@ plugins {
   id 'net.researchgate.release' version '2.0.2'
 }
 
-
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'spring-boot' 
@@ -80,7 +79,7 @@ uploadArchives {
 					userName: priv.user, password: priv.pass
 				)
 			}
-			snapshotRepository(url: priv.host) {
+			snapshotRepository(url: priv.host+'/snapshots') {
                 authentication(
 					userName: priv.user, password: priv.pass
 				)
