--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 
 server.port=8081
+spring.profiles.active=agrix
+agrix.url=jdbc:oracle:thin:@192.168.151.3:1521:orcl
