--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,3 +1,4 @@
+
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:LOC;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE 
 spring.datasource.username=sa
@@ -5,3 +6,5 @@ spring.datasource.password=
 
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+agrix.url=jdbc:oracle:thin:@192.168.151.3:1521:orcl
