--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.151.3:1521:orcl
+#spring.datasource.url=jdbc:oracle:thin:@192.168.151.3:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@172.16.244.129:1521:XE
 spring.datasource.username=IDHADRION
 spring.datasource.password=IDHADRION
 
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 
 server.port=8081
